--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>RezeptBuchPWA</title>
-  <base href="/">
+  <head>
+    <meta charset="utf-8" />
+    <title>RezeptBuchPWA</title>
+    <base href="/" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Cookie|Courgette|Dancing+Script|Indie+Flower|Mali|Pacifico|Ubuntu&display=swap" rel="stylesheet">
-</head>
-<body>
-
-  
-
-  <app-root>
-    <div class="preloader_page">
-        <p class="loading_text">PHONEBOOK</p>
-        <div class="sk-cube-grid">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Amatic+SC|Cookie|Courgette|Dancing+Script|Indie+Flower|Mali|Pacifico|Ubuntu&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <app-root>
+      <div class="preloader_page">
+        <p class="loading_text">Wir bereiten alles vor ...</p>
+        <!--<div class="sk-cube-grid">
           <div class="sk-cube sk-cube1"></div>
           <div class="sk-cube sk-cube2"></div>
           <div class="sk-cube sk-cube3"></div>
@@ -27,9 +30,14 @@
           <div class="sk-cube sk-cube7"></div>
           <div class="sk-cube sk-cube8"></div>
           <div class="sk-cube sk-cube9"></div>
+        </div>-->
+        <div class="sk-folding-cube">
+          <div class="sk-cube1 sk-cube"></div>
+          <div class="sk-cube2 sk-cube"></div>
+          <div class="sk-cube4 sk-cube"></div>
+          <div class="sk-cube3 sk-cube"></div>
         </div>
-    </div>
-    
-  </app-root>
-</body>
+      </div>
+    </app-root>
+  </body>
 </html>
